Improve TODO notes and function ids
Check before trying to insert a value (cached.py)