@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "idict"
-version = "2.211210.1"
+version = "3.211211.0"
 description = "Lazy dict with predictable deterministic universally unique identifiers"
 authors = ["davips <dpsabc@gmail.com>"]
 license = "GPL"
