@@ -21,10 +21,10 @@
 #  time spent here.
 #
 from idict import let
-from idict.function.wrapper import call
+from idict.function.wrapper import call, apply
 
 
-def df_head(input="df", output="head"):
+def df_head(field="df", output="head"):
     """
     >>> from idict import idict
     >>> d = idict.fromtoy(output_format="df")
@@ -37,4 +37,22 @@ def df_head(input="df", output="head"):
     3    1.1    3.5      1
     4    3.1    2.5      0
     """
-    return let(call, input=input, method="head", output=output)
+    return let(call, field=field, method="head", output=output)
+
+
+def xywrapper(function, Xin="X", yin="y", Xout="X", yout="y", version=0, **config):
+    r"""
+    >>> from sklearn.utils import resample
+    >>> from idict import idict
+    >>> d = idict.fromtoy(output_format="Xy")
+    >>> d.y
+    array([0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1, 0, 1])
+    >>> d >>= xywrapper(resample, n_samples=2, random_state=0)
+    >>> d.X
+        attr1  attr2
+    12    2.1    0.1
+    15   31.1    4.7
+    >>> d.y
+    array([0, 1])
+    """
+    return let(apply, function=function, input=[Xin, yin], output=[Xout, yout], config=config)
