@@ -1,2 +1,7 @@
-Improve TODO notes and function ids
-Check before trying to insert a value (cached.py)
+Finish multidynamic input/output (without detection for output)
+
+Put 'translated_input' hardwired as optional
+Fix metadata change inside extract_input()
+Add "[]" to avoid mixing dynamic io with sampling
+
+Disable global memoizer
